--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,53 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Production build
 dist
-.DS_Store
-server/public
-vite.config.ts.*
+build
 *.tar.gz
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.vscode
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# System Files
+.DS_Store
+Thumbs.db
+
+# TypeScript
+*.tsbuildinfo
+vite.config.ts.*
+
+# Cache
+.cache
+.npm
+.eslintcache
+
+# Testing
+coverage
+
+# Replit specific
+.replit
+replit.nix
+.config
